# dependalot

./: go.mod  main.go
.dependabot/: config.yml
.github/: dependabot.yml
src/bundler/v2/: Gemfile
src/poetry/jfrog/: pyproject.toml
src/poetry/jfrog/poet/: pyproject.toml
src/terraform/private/: .terraform.lock.hcl  main.tf
