[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["mo khan <xlgmokha@example.org>"]

[tool.poetry.dependencies]
python = "^3.9"
six = { version = "1.16.0", source = "jfrog" }
zstd = {version = "1.5.2.3", source = "pypi"}

[tool.poetry.dev-dependencies]
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jfrog"
url = "https://xlgmokha.jfrog.io/artifactory/api/pypi/xlg-pypi/simple/"
